# hxd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  TODO_char  git_push  hxd.c  todo
.docs/: render_terminal_svg.py  update_screenshots copy.sh  update_screenshots.sh
.github/workflows/: ci.yml  release.yml
completions/: _hxed  completion_install_snippets.txt  gen_completions.py  hxed.bash  hxed.fish  hxed.ps1  hxed.zsh
include/: Args.h  Config.h  Display.h  DisplayUtils.h  File.h  MagicBytes.h  Utils.h  hxed_config.h.in  version.h  version.h.in  version.in
main/: showcase.md
man/: hxed.1
misc/: hxed.conf
scripts/: install.ps1  install.sh
src/: Args.c  Config.c  Display.c  DisplayUtils.c  File.c  MagicBytes.c  Utils.c  hxd.c  hxed.c
test/: cppcheck_result_unix64.xml  gen_data.c  git_push
